--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
+    "react-select": "^5.8.0",
     "zod": "^3.23.6"
   },
   "devDependencies": {
